<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_weight="1.53"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/scanButton"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_blue"
                android:text="@string/scan" />

            <EditText
                android:id="@+id/searchBox"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:ems="10"
                android:hint="@string/hint_search" />
        </LinearLayout>

        <ListView
            android:id="@+id/inventoryListView"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.8" >
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/addProductButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green"
        android:text="@string/add_new_product" />

</LinearLayout>